# file-crypto-cli

./: .gitignore  1615647612729.id_rsa  1615647612729.id_rsa.pub  Cargo.toml  README.md
.github/workflows/: release.yml
encrypted/: test
src/: crypto.rs  keygen.rs  main.rs  utils.rs  ux.rs
