[package]
name = "file-encrypter"
version = "0.3.0"
authors = ["Jytesh <44925963+Jytesh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
dialoguer = "0.10.2"
orion = "0.17.2"
